Finished Windows .bat file for building jar files
Also checked that exercise programs compile with Java 8 and Java 10, and
changed "new Integer" to "Integer.valueOf" in several programs.